--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -82,10 +82,11 @@ button:hover{
 }
 
 #pokeinfo {
-    padding: 30px 0px;
+    padding-top: 50px;
+    padding-bottom: 150px;
 }
 
-#pokename {
+#pokename, #info {
     text-transform: capitalize;
 }
 
@@ -107,7 +108,6 @@ button:hover{
 #title {
     margin-bottom: 50px;
 }
-
 
 footer {
     background-color: black;
